objects/Account.object
<CustomObject>
    <fields>
        <fullName>Trailers__c</fullName>
        <description>Trailers</description>
        <inlineHelpText>Trailers</inlineHelpText>
        <label>Trailers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Manufacturers__c</fullName>
        <description>Truck Manufacturers</description>
        <inlineHelpText>Truck Manufacturers</inlineHelpText>
        <label>Truck Manufacturers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Years__c</fullName>
        <description>Truck Years</description>
        <inlineHelpText>Truck Years</inlineHelpText>
        <label>Truck Years</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USDOT__c</fullName>
        <label>USDOT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_CAN_States__c</fullName>
        <description>This is a tech create field to reference global picklist values  using getDescribe call as they are not available via api today. Hidden for all except sys admins.</description>
        <label>US CAN States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_State_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Maintenance__c</fullName>
        <description>Vehicle Maintenance</description>
        <inlineHelpText>Vehicle Maintenance</inlineHelpText>
        <label>Vehicle Maintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volvo_Customer_Type__c</fullName>
        <description>The system shall dynamically flag a Customer Account with a Customer Type as &apos;Conquest&apos; or &apos;Retention&apos; so that the logged in User can identify the Account they are viewing.</description>
        <formula>IF (
  AND(
    (TEXT($User.Dealer_Brand__c)==&quot;Volvo&quot; ||$Profile.Name = &quot;Volvo Sales Rep&quot;),

    OR(
         ISBLANK(Last_Volvo_Registration_Date__c),
         (  NOT(ISNUMBER(TEXT(Polk_Fleet_Mix_Volvo__c))) &amp;&amp; Polk_Fleet_Mix_Volvo__c &lt; 0.25),
         Last_Volvo_Registration_Date__c &gt;= TODAY() + 365*3

       )
  )
,&quot;Conquest&quot;,

IF (
  AND(
    (TEXT($User.Dealer_Brand__c)==&quot;Volvo&quot; ||$Profile.Name = &quot;Volvo Sales Rep&quot;),
    OR(
        (Polk_Fleet_Mix_Volvo__c &gt;= 0.25 ),
         Last_Volvo_Registration_Date__c &lt; TODAY() + 365*3
       )
   )
,&quot;Retention&quot;,
&apos;&apos;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The system shall dynamically flag a Customer Account with a Customer Type as &apos;Conquest&apos; or &apos;Retention&apos; so that the logged in User can identify the Account they are viewing.</inlineHelpText>
        <label>Volvo Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volvo_Dealer_Code__c</fullName>
        <label>Volvo Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volvo_National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volvo National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volvo_Sales_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this account a target account for a dealer&apos;s sales plan?</inlineHelpText>
        <label>Volvo Sales Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volvo_VDA_Count__c</fullName>
        <label>Volvo VDA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Coverage_Volvo__c</fullName>
        <label>Warranty Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Coverage__c</fullName>
        <label>Warranty Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2019_Market_Size__c</fullName>
        <label>2019 Market Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_EST__c</fullName>
        <label>Year EST</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>LEFT ( BillingPostalCode , 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBrand__c</fullName>
        <formula>IF(TEXT(Brand__c) = TEXT($User.Dealer_Brand__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerAccount__c</fullName>
        <formula>Dealer_Code__c = $User.Dealer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerCode__c</fullName>
        <formula>IF(Mack_Dealer_Code__c = $User.Dealer_Code__c,TRUE,
IF(Volvo_Dealer_Code__c = $User.Dealer_Code__c,TRUE,
FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerRegion__c</fullName>
        <formula>TEXT(Region__c) = TEXT($User.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerRegion</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Canadian_Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>Canadian Dealers</label>
        <sharedTo>
            <group>CRM_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Conquest_Accounts_Internal</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>Is_Internally_Viewable_Conquest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Conquest Accounts</label>
        <sharedTo>
            <group>Corporate_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mack_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Mack_Customer_Type__c</columns>
        <columns>Strategic_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Mack Customer Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_Vice_President</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mack_Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Sales_Target__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Mack</value>
        </filters>
        <label>Mack Dealers</label>
        <sharedTo>
            <role>Director_Mack_Vocational_Fleet_Sales</role>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_National_Accounts_Manager</role>
            <role>Mack_Vice_President</role>
            <role>Mack_Vocational_National_Accounts_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mack_National_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Mack_National_Account__c</columns>
        <columns>Mack_Customer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mack_National_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Mack National Accounts</label>
        <sharedTo>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_National_Accounts_Vice_President</role>
            <role>Mack_Senior_Vice_President</role>
            <role>Mack_Vice_President</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mack_Strategic_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Mack_Customer_Type__c</columns>
        <columns>Strategic_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <filters>
            <field>Strategic_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mack Strategic Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
            <role>Mack_Corporate_Support_User</role>
            <role>Mack_Senior_Vice_President</role>
            <role>Mack_Vice_President</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Account_Team_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Mack_Customer_Type__c</columns>
        <columns>Volvo_Customer_Type__c</columns>
        <columns>Strategic_Account__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>My &quot;Account Team&quot; Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Canada_Mack_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Canada_Volvo_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Central_Mack_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Central_Volvo_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Northeast_Mack_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Northeast_Volvo_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Southeast_Mack_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Southeast_Volvo_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Southwest_Mack_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Southwest_Volvo_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Western_Mack_Vice_President</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>US_Western_Volvo_Vice_President</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Dealer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Primary_County__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Dealer Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>Dealer_Sales_Executives</group>
            <group>Dealer_Sales_Managers</group>
            <group>Dealer_Sales_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_District_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>Strategic_Account__c</columns>
        <columns>Mack_Sales_Target_Account__c</columns>
        <columns>Volvo_Sales_Target_Account__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Volvo_Customer_Type__c</columns>
        <columns>Mack_Customer_Type__c</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>My District&apos;s Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Mack_District_Sales_Managers</group>
            <group>Volvo_District_Sales_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_District_s_Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Sales_Target__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <label>My District&apos;s Dealers</label>
        <language>en_US</language>
        <sharedTo>
            <group>Mack_District_Sales_Managers</group>
            <group>Volvo_District_Sales_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_National_Accounts</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Volvo_National_Account__c</columns>
        <columns>Mack_National_Account__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <filters>
            <field>Mack_National_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Volvo_National_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My National Accounts</label>
        <sharedTo>
            <group>Mack_National_Accounts_Managers</group>
            <group>Volvo_National_Accounts_Managers</group>
            <role>Mack_Vocational_National_Accounts_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Volvo_Customer_Type__c</columns>
        <columns>Mack_Customer_Type__c</columns>
        <columns>Strategic_Account__c</columns>
        <filterScope>MyTeamTerritory</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>My Region&apos;s Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Mack_RVP_s</group>
            <group>Mack_Regional_Fleet_Managers</group>
            <group>Volvo_RVP_s</group>
            <group>Volvo_Regional_Fleet_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Sales_Target__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <filters>
            <field>isDealerRegion__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region&apos;s Dealers</label>
        <language>en_US</language>
        <sharedTo>
            <group>Mack_RVP_s</group>
            <group>Mack_Regional_Fleet_Managers</group>
            <group>Volvo_RVP_s</group>
            <group>Volvo_Regional_Fleet_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Regional_Fleet_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Mack_Customer_Type__c</columns>
        <columns>Strategic_Account__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>My Regional Fleet Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Mack_Regional_Fleet_Managers</group>
            <group>Volvo_Regional_Fleet_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Sales_Plan_Accounts_Mack</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Party_ID__c</columns>
        <columns>Mack_Sales_Target_Account__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <filters>
            <field>Mack_Sales_Target_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mack Dealer Planned Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Mack_District_Sales_Managers</group>
            <role>Canada_Mack_District_Sales_Manager</role>
            <role>US_Central_Mack_District_Sales_Manager</role>
            <role>US_Northeast_Mack_District_Sales_Manager</role>
            <role>US_Southeast_Mack_District_Sales_Manager</role>
            <role>US_Southwest_Mack_District_Sales_Manager</role>
            <role>US_Western_Mack_District_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Corporate</fullName>
        <active>true</active>
        <description>Accounts Record Type for Corporate</description>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Account Record Type for Customers</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <description>Account Record Type for Dealers</description>
        <label>Dealer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Merged</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND(MergeStatus__c =&apos;Merged&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos; ,
$Profile.Name &lt;&gt; $Label.Vgtna_System_Integrator_Profile_Name)
, true, false)</errorConditionFormula>
        <errorMessage>Account is Not Editable. This is Merged.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Name_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>For All Account Record types - Account Name cannot be changed except by System Admin and System Integrator profiles</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Name ), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; $Label.Vgtna_System_Integrator_Profile_Name
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Account_from_Lead_Conversion_stopped</fullName>
        <active>true</active>
        <description>Prevents new Account records from being created during lead conversion.  Lead Field mapping sets this value to true.  Stopping only on new Account creation during lead conversion.</description>
        <errorConditionFormula>AND(
ISNEW(),
  From_Lead_Conversion_Do_not_Map_in_Loads__c,
  RecordType.Name = &apos;Customer&apos;
)</errorConditionFormula>
        <errorMessage>New Account Record creation is not allowable during Lead Conversion.  Please create a new Account from Quick Create or Account Management so that a Party ID can be assigned and select &apos;Choose Existing&apos; Account during Lead Conversion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Party_ID_Required_NewCustomerAccount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), RecordType.DeveloperName=&apos;Customer&apos;, ISBLANK(Party_ID__c))</errorConditionFormula>
        <errorMessage>Party ID missing. Please use the standard create Customer Account process first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Party_ID_cannot_be_changed</fullName>
        <active>true</active>
        <description>Party ID once assigned cannot be changed unless you are a System Admin.</description>
        <errorConditionFormula>AND(NOT(ISNEW()), RecordType.DeveloperName=&apos;Customer&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;,NOT(ISBLANK( PRIORVALUE(Party_ID__c ))),ISCHANGED( Party_ID__c ))</errorConditionFormula>
        <errorDisplayField>Party_ID__c</errorDisplayField>
        <errorMessage>Party ID once assigned cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>